# ai-screen-control

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
scripts/: generate-icon.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: ChatInterface.tsx  FloatingBubble.tsx  ScreenControlPanel.tsx  SettingsPanel.tsx  VideoAnalyzer.tsx
src/styles/: ChatInterface.css  FloatingBubble.css  ScreenControlPanel.css  SettingsPanel.css  VideoAnalyzer.css
website/: accessibility.html  index.html  reviews.html  script.js  site.js  standalone.html  styles.css  support.html
